{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 179,
  "lineage": "efd2c9e0-5ccf-01e6-6d38-5f88a00facb0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "squid-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkInterfaces/squid-nic",
            "internal_domain_name_suffix": "y20cs0othlhujev2pstgewwgcc.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.178.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/publicIPAddresses/squid-nic-pubip",
                "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-squid-vnet/subnets/adb-9scqth-squid-public"
              }
            ],
            "location": "southeastasia",
            "mac_address": "00-0D-3A-A1-02-1B",
            "name": "squid-nic",
            "private_ip_address": "10.178.0.4",
            "private_ip_addresses": [
              "10.178.0.4"
            ],
            "resource_group_name": "adb-9scqth-rg",
            "virtual_machine_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Compute/virtualMachines/squid-vm"
          },
          "dependencies": [
            "azurerm_public_ip.squid-nic-pubip",
            "azurerm_resource_group.this",
            "azurerm_subnet.squid-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkInterfaces/squid-nic|/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg",
            "network_interface_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkInterfaces/squid-nic",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_subnet.squid-public-subnet",
            "azurerm_virtual_network.squidvnet",
            "data.external.me",
            "random_string.naming",
            "azurerm_network_interface.squid-nic",
            "azurerm_network_security_group.squidnsg",
            "azurerm_public_ip.squid-nic-pubip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dbnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg",
            "location": "southeastasia",
            "name": "adb-9scqth-nsg",
            "resource_group_name": "adb-9scqth-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh_squid",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3128",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http_squid",
                "priority": 301,
                "protocol": "Tcp",
                "source_address_prefix": "10.179.0.0/20",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3130",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https_squid",
                "priority": 302,
                "protocol": "Tcp",
                "source_address_prefix": "10.179.0.0/20",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "https_out_squid",
                "priority": 304,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "http_out_squid",
                "priority": 303,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks Webapp.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "9scqth",
              "Owner": "hao.wang@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "squidnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg",
            "location": "southeastasia",
            "name": "adb-9scqth-nsg",
            "resource_group_name": "adb-9scqth-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh_squid",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3128",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http_squid",
                "priority": 301,
                "protocol": "Tcp",
                "source_address_prefix": "10.179.0.0/20",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3130",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https_squid",
                "priority": 302,
                "protocol": "Tcp",
                "source_address_prefix": "10.179.0.0/20",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "https_out_squid",
                "priority": 304,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "http_out_squid",
                "priority": 303,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks Webapp.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 100,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "9scqth",
              "Owner": "hao.wang@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_out_squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg/securityRules/http_out_squid",
            "name": "http_out_squid",
            "network_security_group_name": "adb-9scqth-nsg",
            "priority": 303,
            "protocol": "Tcp",
            "resource_group_name": "adb-9scqth-rg",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming",
            "azurerm_network_security_group.squidnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3128",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg/securityRules/http_squid",
            "name": "http_squid",
            "network_security_group_name": "adb-9scqth-nsg",
            "priority": 301,
            "protocol": "Tcp",
            "resource_group_name": "adb-9scqth-rg",
            "source_address_prefix": "10.179.0.0/20",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.squidnsg",
            "azurerm_resource_group.this",
            "azurerm_virtual_network.dbvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_out_squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg/securityRules/https_out_squid",
            "name": "https_out_squid",
            "network_security_group_name": "adb-9scqth-nsg",
            "priority": 304,
            "protocol": "Tcp",
            "resource_group_name": "adb-9scqth-rg",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.external.me",
            "random_string.naming",
            "azurerm_network_security_group.squidnsg",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3130",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg/securityRules/https_squid",
            "name": "https_squid",
            "network_security_group_name": "adb-9scqth-nsg",
            "priority": 302,
            "protocol": "Tcp",
            "resource_group_name": "adb-9scqth-rg",
            "source_address_prefix": "10.179.0.0/20",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.squidnsg",
            "azurerm_resource_group.this",
            "azurerm_virtual_network.dbvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg/securityRules/ssh_squid",
            "name": "ssh_squid",
            "network_security_group_name": "adb-9scqth-nsg",
            "priority": 300,
            "protocol": "TCP",
            "resource_group_name": "adb-9scqth-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.squidnsg",
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "squid-nic-pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/publicIPAddresses/squid-nic-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.212.53.70",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "squid-nic-pubip",
            "resource_group_name": "adb-9scqth-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "adbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/routeTables/udr-routetable",
            "location": "southeastasia",
            "name": "udr-routetable",
            "resource_group_name": "adb-9scqth-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "to-proxy",
                "next_hop_in_ip_address": "0.0.0.0",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.179.2.0/23",
            "address_prefixes": [
              "10.179.2.0/23"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-private",
            "name": "adb-9scqth-private",
            "resource_group_name": "adb-9scqth-rg",
            "virtual_network_name": "adb-9scqth-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.dbvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.179.0.0/23",
            "address_prefixes": [
              "10.179.0.0/23"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-public",
            "name": "adb-9scqth-public",
            "resource_group_name": "adb-9scqth-rg",
            "virtual_network_name": "adb-9scqth-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.dbvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "squid-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.178.0.0/23",
            "address_prefixes": [
              "10.178.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-squid-vnet/subnets/adb-9scqth-squid-public",
            "name": "adb-9scqth-squid-public",
            "resource_group_name": "adb-9scqth-rg",
            "virtual_network_name": "adb-9scqth-squid-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.squidvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-private",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-private"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_subnet.private",
            "azurerm_virtual_network.dbvnet",
            "data.external.me",
            "random_string.naming",
            "azurerm_network_security_group.dbnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-public",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-public"
          },
          "dependencies": [
            "azurerm_subnet.public",
            "azurerm_virtual_network.dbvnet",
            "data.external.me",
            "random_string.naming",
            "azurerm_network_security_group.dbnsg",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dbvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.179.0.0/20"
            ],
            "guid": "844e9fa5-efaa-41d4-a38b-acaeb4e8c533",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet",
            "location": "southeastasia",
            "name": "adb-9scqth-vnet",
            "resource_group_name": "adb-9scqth-rg",
            "subnet": [
              {
                "address_prefix": "10.179.0.0/23",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-public",
                "name": "adb-9scqth-public",
                "security_group": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg"
              },
              {
                "address_prefix": "10.179.2.0/23",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/subnets/adb-9scqth-private",
                "name": "adb-9scqth-private",
                "security_group": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/networkSecurityGroups/adb-9scqth-nsg"
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "9scqth",
              "Owner": "hao.wang@databricks.com"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "squidvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.178.0.0/20"
            ],
            "guid": "692934c7-3ad3-44cf-92bc-7ca6625ac612",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-squid-vnet",
            "location": "southeastasia",
            "name": "adb-9scqth-squid-vnet",
            "resource_group_name": "adb-9scqth-rg",
            "subnet": [
              {
                "address_prefix": "10.178.0.0/23",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-squid-vnet/subnets/adb-9scqth-squid-public",
                "name": "adb-9scqth-squid-public"
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "9scqth",
              "Owner": "hao.wang@databricks.com"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "db2squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet/virtualNetworkPeerings/db2squid",
            "name": "db2squid",
            "remote_virtual_network_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-squid-vnet",
            "resource_group_name": "adb-9scqth-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "adb-9scqth-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.squidvnet",
            "data.external.me",
            "random_string.naming",
            "azurerm_resource_group.this",
            "azurerm_virtual_network.dbvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "squid2db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-squid-vnet/virtualNetworkPeerings/squid2db",
            "name": "squid2db",
            "remote_virtual_network_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-9scqth-rg/providers/Microsoft.Network/virtualNetworks/adb-9scqth-vnet",
            "resource_group_name": "adb-9scqth-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "adb-9scqth-squid-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.dbvnet",
            "azurerm_virtual_network.squidvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}